# lab-llm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: coordination.defaults.example.toml  coordination_protocol.md  current_state_audit.md  dashboard_repo_architecture.md  frontend-plan.md  gap_ledger.md  headless_codex_loop_reference.md  operator_questions.md  successful_lab.md
docs/coordination/: focus.example.txt
docs/decisions/: 0001-external-telemetry-boundary.md  0002-observability-first-shared-shell.md  0003-dashboard-owns-gap-ledger.md  README.md
docs/specs/: 0001-observability-dashboard-mvp.md  0002-dashboard-read-models-and-api-shape.md  README.md
fixtures/telemetry/: sample_session.jsonl
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: capture.mjs
frontend/src/: App.tsx  chart.tsx  main.tsx  styles.css  types.ts
scripts/: audit-dashboard.sh  check-full.sh  check-quick.sh  coordination_config.py  coordination_state.py  dev-backend.sh  dev-frontend.sh  gap_slice.py  pull-model-runner-response.sh  push-gap-slice.sh  reconcile-gap-ledger.sh  run-gap-loop.sh  run-model-runner-gap-pass.sh  verification_target.py
src/lab_llm/: __init__.py  fixtures.py  live.py  main.py  server.py  store.py  telemetry.py
src/lab_llm/static/: index.html
tests/: test_live.py  test_server.py  test_store.py
